--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ header{
     position: sticky;
     top: 0;
     height: 56px;
+    z-index: 1;
 }
 
 #name{
@@ -94,6 +95,40 @@ main{
     animation-name: welcome;
     animation-duration: 2s;
     animation-iteration-count: infinite;
+}
+
+
+
+
+
+#divgrid{
+    display: grid;
+    grid-template-rows: repeat(auto-fit, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(250px,1fr));
+    gap: 20px;
+}
+.chbox{
+    border: 2px solid black;
+    box-shadow: 0px 0px 3px black;
+    padding: 8px;
+    text-align: center;
+}
+.chbox img{
+    width: 150px;
+    margin-bottom: 6px;
+}
+.chbox:hover{
+    scale: 1.02;
+    background-color: hsl(180, 100%, 98%);
+}
+
+#divgrid a{
+    text-decoration: none;
+    color: black;
+}
+#divgrid a:hover{
+    text-decoration: underline;
+    color: hsl(214, 100%, 50%);
 }
 
 
