--- a/style.css
+++ b/style.css
@@ -211,6 +211,16 @@ footer a{
 
 @media screen and (max-width: 700px){
 
+    /* General setup */
+
+    h1, h2, h3, .infobox, .navbox {
+        font-family: Arial, "Helvetica Neue", sans-serif;
+    }
+    body {
+        font-family: "Linux Libertine", Georgia, "Times New Roman", Times, serif;
+    }
+    
+
     /* Header and nav reponsiveness */
     header{
         display: block;
