added 3d distance formula along with some renderring to the equation format

--- a/style.css
+++ b/style.css
@@ -216,9 +216,9 @@ footer a{
     h1, h2, h3, .infobox, .navbox {
         font-family: Arial, "Helvetica Neue", sans-serif;
     }
-    body {
+    /* body {
         font-family: "Linux Libertine", Georgia, "Times New Roman", Times, serif;
-    }
+    } */
     
 
     /* Header and nav reponsiveness */
