made the header non-sticky for mobile devices

--- a/style.css
+++ b/style.css
@@ -224,6 +224,8 @@ footer a{
     /* Header and nav reponsiveness */
     header{
         display: block;
+        position: relative;
+        top: 0;
     }
     #name{
         padding: 12px;
