--- a/style.css
+++ b/style.css
@@ -108,7 +108,8 @@ main{
 #divgrid{
     display: grid;
     grid-template-rows: repeat(auto-fit, 1fr);
-    grid-template-columns: repeat(auto-fit, minmax(250px,1fr));
+    grid-template-columns: repeat(auto-fit, minmax(317px,1fr));
+    align-items: stretch;
     gap: 20px;
 }
 .chbox{
@@ -144,7 +145,7 @@ main{
 
 footer{
     background-color: black;
-    height: 100px;
+    height: 80px;
     color: white;
     padding: 8px;
 }
