--- a/style.css
+++ b/style.css
@@ -360,7 +360,7 @@ main{
 
 footer{
     background-color: black;
-    height: 80px;
+    height: auto;
     color: white;
     padding: 8px;
     box-shadow: 0 0 8px white;
@@ -368,6 +368,11 @@ footer{
 footer a{
     color: hsl(170, 100%, 50%);
     text-decoration: none;
+}
+footer p{
+    align-self: center;
+    padding-left: 10px;
+    text-shadow: 0 0 1px white;
 }
 
 
