--- a/style.css
+++ b/style.css
@@ -150,7 +150,7 @@ nav a.active {
 
 /* Mode toggle button */
 
-#fixedmodediv{
+/* #fixedmodediv{
     position: fixed;
     top: 65px;
     right: 20px;
@@ -165,7 +165,7 @@ nav a.active {
     border: 2px solid white;
     border-radius: 15px;
     padding: 0;
-}
+} */
 #modebut{
     display: flex;
     justify-content:center;
