updates the bfnavi in vectors.html and added the onclick closing functionality for the main nav and the bfnavi

--- a/style.css
+++ b/style.css
@@ -284,6 +284,10 @@ nav a.active {
     background-color: hsl(0, 0%, 95%);
     box-shadow: 0 0 2px black;
 }
+#bfnav:active{
+    background-color: hsl(0, 0%, 85%);
+    box-shadow: 0 0 2px black;
+}
 
 
 #bfnavi{
