made the bfnavi not to be opened upon hover over the mainbfnav to fix the previous issue

--- a/style.css
+++ b/style.css
@@ -255,9 +255,9 @@ nav a.active {
 
 
 
-#mainfnav:hover>ol{
+/* #mainfnav:hover>ol{
     display: block;
-}
+} */
 #mainfnav{
     display: inline-block;
     position: fixed;
