--- a/style.css
+++ b/style.css
@@ -119,10 +119,10 @@ nav{
     width: 180px;
     position: absolute;
     font-size: small;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     border-radius: 15px;
     right: -40%;
-    margin-top: 2px;
+    margin-top: 1px;
     overflow: hidden;
 }
 #chapterlist div{
@@ -417,8 +417,23 @@ footer a:hover{
 
 
 
+/* Chapter specific styling */
 
+.imgdiv{
+    overflow: auto;
+}
+.imgdiv {
+  scrollbar-width: thin;
+  scrollbar-color: darkgray transparent;
 
+}
+.imgdiv::-webkit-scrollbar {
+  height: 8px;
+}
+.imgdiv::-webkit-scrollbar-thumb {
+  background-color: darkgray;
+  border-radius: 4px;
+}
 
 
 
