--- a/style.css
+++ b/style.css
@@ -409,7 +409,9 @@ footer a:hover{
 #footdiv{
     display: flex;
     justify-content: space-around;
+    width: 100%;
 }
+
 
 
 
@@ -583,6 +585,27 @@ footer a:hover{
     #footdiv{
         flex-direction: column;
         align-items: center;
+    }
+    .c1fdiv{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        /* justify-content: ; */
+        /* align-items: center; */
+    }
+    .c1fdiv p{
+        margin-left: 25px;
+        margin-top: 0;
+        margin-bottom: 0;
+    }
+    .c1fdiv > p{
+        margin-top: 20px;
+        margin-bottom: 5px;
+    }
+    .c2fdiv{
+        display: flex;
+        align-items: center;
+        margin: 0;
     }
 }
 
