--- a/style.css
+++ b/style.css
@@ -484,8 +484,8 @@ body.loading {
     display: flex;
     justify-content: center;
     align-items: center;
-    background: rgba(255, 255, 255, 0.8);
-    z-index: 9999;
+    /* background: rgba(255, 255, 255, 0.8); */
+    z-index: 2000;
 }
 
 #mloader{
@@ -495,9 +495,9 @@ body.loading {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    box-shadow: 0 0 8px black;
+    /* box-shadow: 0 0 8px black; */
     border-radius: 5px;
-    background: white;
+    /* background: white; */
 }
 
 .spinner {
