wakes the euler angle server every time someone visits the euler angles page, also added the loading class to ea_display

--- a/static/style.css
+++ b/static/style.css
@@ -676,6 +676,12 @@ input[type=number] {
     color: hsl(0, 58%, 24%);
 }
 
+#ea_display.loading {
+    background-color: hsl(210, 100%, 96%); /* light blue */
+    border-color: hsl(210, 60%, 80%);
+    color: hsl(210, 60%, 25%);
+}
+
 
 
 
