--- a/static/style.css
+++ b/static/style.css
@@ -42,7 +42,7 @@ mjx-mtable {
 
 
 main{
-    width: 85%;
+    width: 70%;
     justify-self: center;
     z-index: 10px;
     /* background-color: #ffffff; */
@@ -246,9 +246,12 @@ nav a.active {
     height: 40px;
     cursor: pointer;
     box-shadow: 0 0 8px hsl(195, 79%, 32%);
+    display: flex;
+    align-items: center;
 }
 #downloadBtn a{
     color: white;
+    text-decoration: none;
 }
 #downloadBtn:hover{
     background-color: hsl(195, 79%, 42%);
@@ -452,12 +455,18 @@ footer a:hover{
 }
 
 /* .exdiv{
-    background-color: hsl(160, 100%, 75%);
+    background-color: hsl(0, 0%, 65%);
     padding: 10px;
-    border: 3px solid hsl(160, 100%, 45%);
+    border: 3px solid hsl(0, 0%, 45%);
     border-radius: 10px;
     color: black;
     clear: both;
+}
+.exdiv a{
+    color: hsl(0, 0%, 100%) !important;
+}
+.exdiv a:visited{
+    color: hsl(268, 86%, 49%) !important;
 } */
 
 /* .bfnavitestli{
